Fix issue with pages aligning left

--- a/src/styles.css
+++ b/src/styles.css
@@ -56,9 +56,7 @@ p {
 .content-container {
   padding: 60px 20px;
 }
-.content-container {
-  margin: 30px;
-}
+
 .hero {
   background: var(--secondary-color);
   text-align: center;
